dist/bovnar.h

typedef struct bvn_dom_node_s  bvn_dom_node_t;
BVN_API char *bvn_dom_int_to_str(const bvn_dom_node_t *node, uint32_t base);
BVN_API bool bvn_dom_get_u16(const bvn_dom_node_t *node, uint16_t *out);
BVN_API bool bvn_dom_get_i8 (const bvn_dom_node_t *node, int8_t   *out);
BVN_API bool bvn_dom_get_u8 (const bvn_dom_node_t *node, uint8_t  *out);