python/bovnar/_ffi.py


    lib.bvn_dom_get_u16.restype  = c_bool
    lib.bvn_dom_get_u16.argtypes = [c_void_p, P(c_uint16)]

    lib.bvn_dom_get_i8.restype   = c_bool
    lib.bvn_dom_get_i8.argtypes  = [c_void_p, P(c_int8)]

    lib.bvn_dom_get_u8.restype   = c_bool
    lib.bvn_dom_get_u8.argtypes  = [c_void_p, P(c_uint8)]

    lib.bvn_dom_int_to_str.restype  = c_void_p
    lib.bvn_dom_int_to_str.argtypes = [c_void_p, c_uint32]
